# Boom-Tetris

./: .gitignore  README.md  main.py  makefile  pyproject.toml
src/boom_tetris/: board.py  config_loader.py  constants.py  game.py  polyomino.py  polyomino_generator.py  renderer.py  tetromino.py  tetromino_generator.py
src/boom_tetris/config/: config.py  model.py
src/boom_tetris/configs/: all_polyominos.yaml  controls.py  main_config.yaml  main_config_augmented.yaml  tetromino_properties.json  tetrominos.json
src/boom_tetris/polyomino/: polyomino.py  polyomino_generator.py  polyomino_transformer.py  utils.py
src/boom_tetris/utils/: dict_utils.py  dot_dict.py  game_utils.py  yaml_dumper.py
